# LearningC

./: CMakeLists.txt  README.md  main.c
Introductory/: bitshift.c  dynamic_arrays.c  yeild.c
Structures/: basic_structs.c
Threading/: READEME.md  detaching.c  disconnects.c  exit_threads.c  join_main.c  multi_thread.c  mutex.c  passing_values.c  producer_consumer.c  simple_thread.c  thread_ids.c
pointers/: array_pointers.c  arrays.c  changing_pointer_values.c  pointer_copies.c  static_pointers.c
